--- a/index.html
+++ b/index.html
@@ -11,59 +11,144 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Testimonials Grid Section</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
 
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <title>Testimonials Grid Section</title>
   </head>
   <body>
-    Daniel Clifford Verified Graduate I received a job offer mid-course, and the
-    subjects I learned were current, if not more so, in the company I joined. I
-    honestly feel I got every penny’s worth. “ I was an EMT for many years
-    before I joined the bootcamp. I’ve been looking to make a transition and
-    have heard some people who had an amazing experience here. I signed up for
-    the free intro course and found it incredibly fun! I enrolled shortly
-    thereafter. The next 12 weeks was the best - and most grueling - time of my
-    life. Since completing the course, I’ve successfully switched careers,
-    working as a Software Engineer at a VR startup. ” Jonathan Walters Verified
-    Graduate The team was very supportive and kept me motivated “ I started as a
-    total newbie with virtually no coding skills. I now work as a mobile
-    engineer for a big company. This was one of the best investments I’ve made
-    in myself. ” Jeanette Harmon Verified Graduate An overall wonderful and
-    rewarding experience “ Thank you for the wonderful experience! I now have a
-    job I really enjoy, and make a good living while doing something I love. ”
-    Patrick Abrams Verified Graduate Awesome teaching support from TAs who did
-    the bootcamp themselves. Getting guidance from them and learning from their
-    experiences was easy. “ The staff seem genuinely concerned about my progress
-    which I find really refreshing. The program gave me the confidence necessary
-    to be able to go out in the world and present myself as a capable junior
-    developer. The standard is above the rest. You will get the personal
-    attention you need from an incredible community of smart and amazing people.
-    ” Kira Whittle Verified Graduate Such a life-changing experience. Highly
-    recommended! “ Before joining the bootcamp, I’ve never written a line of
-    code. I needed some structure from professionals who can help me learn
-    programming step by step. I was encouraged to enroll by a former student of
-    theirs who can only say wonderful things about the program. The entire
-    curriculum and staff did not disappoint. They were very hands-on and I never
-    had to wait long for assistance. The agile team project, in particular, was
-    outstanding. It took my learning to the next level in a way that no tutorial
-    could ever have. In fact, I’ve often referred to it during interviews as an
-    example of my developent experience. It certainly helped me land a job as a
-    full-stack developer after receiving multiple offers. 100% recommend! ”
+    <main class="grid-container">
+      <div class="testimonials-grid">
+        <div class="testimonial testimonial--violet" style="grid-area: daniel">
+          <img
+            src="./images/image-daniel.jpg"
+            alt=""
+            class="testimonial__img border-lavender"
+          />
+          <div class="testimonial__student">
+            <div class="testimonial__student__name">Daniel Clifford</div>
+            <div class="testimonial__student__verified">Verified Graduate</div>
+          </div>
+          <h1 class="testimonial__heading">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny's worth.
+          </h1>
+          <blockquote class="testimonial__quote">
+            “ I was an EMT for many years before I joined the bootcamp. I've
+            been looking to make a transition and have heard some people who had
+            an amazing experience here. I signed up for the free intro course
+            and found it incredibly fun! I enrolled shortly thereafter. The next
+            12 weeks was the best - and most grueling - time of my life. Since
+            completing the course, I've successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </blockquote>
+        </div>
 
-    <div class="attribution">
+        <div class="testimonial testimonial--blue" style="grid-area: jonathan">
+          <img
+            src="./images/image-jonathan.jpg"
+            alt=""
+            class="testimonial__img"
+          />
+          <div class="testimonial__student">
+            <div class="testimonial__student__name">Jonathan Walters</div>
+            <div class="testimonial__student__verified">Verified Graduate</div>
+          </div>
+          <h1 class="testimonial__heading">
+            The team was very supportive and kept me motivated
+          </h1>
+          <blockquote class="testimonial__quote">
+            “ I started as a total newbie with virtually no coding skills. I now
+            work as a mobile engineer for a big company. This was one of the
+            best investments I've made in myself. ”
+          </blockquote>
+        </div>
+
+        <div class="testimonial" style="grid-area: jeanette">
+          <img
+            src="./images/image-jeanette.jpg"
+            alt=""
+            class="testimonial__img"
+          />
+          <div class="testimonial__student">
+            <div class="testimonial__student__name">Jeanette Harmon</div>
+            <div class="testimonial__student__verified">Verified Graduate</div>
+          </div>
+          <h1 class="testimonial__heading">
+            An overall wonderful and rewarding experience
+          </h1>
+          <blockquote class="testimonial__quote">
+            “ Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. ”
+          </blockquote>
+        </div>
+
+        <div class="testimonial testimonial--black" style="grid-area: patrick">
+          <img
+            src="./images/image-patrick.jpg"
+            alt=""
+            class="testimonial__img border-lavender"
+          />
+          <div class="testimonial__student">
+            <div class="testimonial__student__name">Patrick Abrams</div>
+            <div class="testimonial__student__verified">Verified Graduate</div>
+          </div>
+          <h1 class="testimonial__heading">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </h1>
+          <blockquote class="testimonial__quote">
+            “ The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </blockquote>
+        </div>
+
+        <div class="testimonial" style="grid-area: kira">
+          <img src="./images/image-kira.jpg" alt="" class="testimonial__img" />
+          <div class="testimonial__student">
+            <div class="testimonial__student__name">Kira Whittle</div>
+            <div class="testimonial__student__verified">Verified Graduate</div>
+          </div>
+          <h1 class="testimonial__heading">
+            Such a life-changing experience. Highly recommended!
+          </h1>
+          <blockquote class="testimonial__quote">
+            “ Before joining the bootcamp, I've never written a line of code. I
+            needed some structure from professionals who can help me learn
+            programming step by step. I was encouraged to enroll by a former
+            student of theirs who can only say wonderful things about the
+            program. The entire curriculum and staff did not disappoint. They
+            were very hands-on and I never had to wait long for assistance. The
+            agile team project, in particular, was outstanding. It took my
+            learning to the next level in a way that no tutorial could ever
+            have. In fact, I've often referred to it during interviews as an
+            example of my developent experience. It certainly helped me land a
+            job as a full-stack developer after receiving multiple offers. 100%
+            recommend! ”
+          </blockquote>
+        </div>
+      </div>
+    </main>
+
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://www.github.com/mgksp" target="_blank">Prabu</a>.
-    </div>
+    </footer>
   </body>
 </html>
+
